--- a/pom.xml
+++ b/pom.xml
@@ -14,7 +14,7 @@
         <!-- Java compiler version -->
         <javac.target>11</javac.target>
         <!-- JMH version to use with this project. -->
-        <jmh.version>1.21</jmh.version>
+        <jmh.version>1.22</jmh.version>
     </properties>
 
     <build>
@@ -81,6 +81,11 @@
             <groupId>org.mapdb</groupId>
             <artifactId>mapdb</artifactId>
             <version>3.0.5</version>
+        </dependency>
+        <dependency>
+            <groupId>org.freemarker</groupId>
+            <artifactId>freemarker</artifactId>
+            <version>2.3.29</version>
         </dependency>
     </dependencies>
 </project>
